# Tendzone

./: BordLine.qml  CMakeLists.txt  ConfirmDialog.qml  CustomerButton.qml  Global.qml  Language.qml  Logo.qml  PasswordDialog.qml  ProcessDialog.qml  SettingDialog.qml  Splash.qml  VolumeDialog.qml  WSServer.qml  WebSocket.qml  junjie.jks  main.cpp  main.qml  qtquickcontrols2.conf  tendzone.js
android/: AndroidManifest.xml
button/: ColorButton.qml  MenuButton.qml
dialog/: CameraDialog.qml  ConfirmDialog.qml  MenuDialog.qml  PasswordDialog.qml  ProcessDialog.qml  SettingDialog.qml  VolumeDialog.qml
js/: tendzone.js
others/: Background.qml  Language.qml  Logo.qml  Splash.qml
websocket/: SocketStatus.qml  WSClient.qml  WSServer.qml
